--- a/src/components/StatisticsTab/StatisticsTab.module.css
+++ b/src/components/StatisticsTab/StatisticsTab.module.css
@@ -19,6 +19,10 @@
 .wrapTable {
   width: 100%;
 
+  @media (max-width: 767px) {
+    padding-inline: 20px;
+  }
+
   @media (min-width: 1280px) {
     width: 395px;
   }
