--- a/src/components/EditTransactionForm/EditTransactionForm.module.css
+++ b/src/components/EditTransactionForm/EditTransactionForm.module.css
@@ -42,8 +42,8 @@
     gap: 20px;
     margin-bottom: 40px;
 
-    .label {
-      width: 170px;
+    label {
+      width: 180px;
     }
 
     .wrap {
@@ -102,19 +102,30 @@
   }
 }
 
+.labelDate {
+  padding-right: 0;
+
+  input {
+    padding-right: 0;
+  }
+}
+
 .datePicker {
-  margin-right: 10px;
+  font-size: 18px;
+  margin-left: 10px;
 }
 
 .icon {
   color: var(--white-600);
-
   opacity: 0.4;
   margin-left: 10px;
 }
 
 .iconDate {
   margin-inline: 0 10px;
+  flex-shrink: 0;
+  padding: 1px;
+  height: 28px;
 }
 
 .comment {
