--- a/src/components/TransactionsList/TransactionsList.module.css
+++ b/src/components/TransactionsList/TransactionsList.module.css
@@ -12,6 +12,13 @@
   @media (min-width: 1280px) {
     padding-block: 46px 20px;
     overflow-y: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  }
+}
+.transactionsContainer::-webkit-scrollbar {
+  @media (min-width: 1280px) {
+    display: none;
   }
 }
 
